<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:scrollbars="vertical"  
    android:fadingEdge="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:scrollbarStyle="outsideInset"  
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选项设置" 
        android:textSize="16dp"/>

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/mouse_move_rang"/>
	    <SeekBar
	        android:id="@+id/sbMouseMoveRange"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:max="10" />
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	    android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/img_quality"/>
	    <SeekBar
	        android:id="@+id/sbImageQuality"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content" 
	        android:max="99"/>
	</LinearLayout>
	
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="5dp"
    	android:text="@string/show_model"/>
	<RadioGroup 
	    android:id="@+id/rgShowModel" 
	    android:contentDescription="@string/show_model" 
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
	    
	    <RadioButton
	        android:id="@+id/rbFullScreen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/showModel_fullScreen" />
	    
	    <RadioButton
	        android:id="@+id/rbFallowMouse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/showModel_fallowMouse" />
	</RadioGroup>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/save_path" />

	<EditText
	    android:id="@+id/etSavePath"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="目标主机端口号:" />

	<EditText
	    android:id="@+id/etPort"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:numeric="integer">
	</EditText>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="15dp"
	    android:text="连接设置" />

	<RadioGroup 
	    android:id="@+id/rgConnect" 
	    android:contentDescription="@string/show_model" 
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
	    
	    <RadioButton
	        android:id="@+id/rbLocalNetwork"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="局域网模式" />
	    
	    <RadioButton
	        android:id="@+id/rbPublicNetwork"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="公网模式" />
	</RadioGroup>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:text="目标主机IP地址(公网模式):" />

	<EditText
	    android:id="@+id/etIP"
	    android:layout_width="fill_parent"
	    android:layout_margin="5dp"
	    android:layout_height="wrap_content"
	    android:enabled="false" >
	</EditText>

	<Button
	    android:id="@+id/btnSave"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="保存修改" />
	
</LinearLayout>
</ScrollView>